syntax = "proto3";

package discopanel.v1;

option go_package = "github.com/nickheyer/discopanel/pkg/proto/discopanel/v1;discopanelv1";

// Configuration management
service ConfigService {
  // Fetch server environment variables
  rpc GetServerConfig(GetServerConfigRequest) returns (GetServerConfigResponse);
  // Update server environment variables
  rpc UpdateServerConfig(UpdateServerConfigRequest) returns (UpdateServerConfigResponse);
  // Fetch system-wide defaults
  rpc GetGlobalSettings(GetGlobalSettingsRequest) returns (GetGlobalSettingsResponse);
  // Update system-wide defaults
  rpc UpdateGlobalSettings(UpdateGlobalSettingsRequest) returns (UpdateGlobalSettingsResponse);
}

// Single configuration field
message ConfigProperty {
  string key = 1;
  string label = 2;
  string value = 3;
  optional string default_value = 4;
  string type = 5; // text, number, checkbox, select, password
  string description = 6;
  bool required = 7;
  bool system = 8; // If true, field is auto-populated and read-only
  bool ephemeral = 9; // If true, field is cleared after server start
  string env_var = 10;
  repeated string options = 11; // For select type
}

// Group of related config fields
message ConfigCategory {
  string name = 1;
  repeated ConfigProperty properties = 2;
}

// Server config request
message GetServerConfigRequest {
  string server_id = 1;
}

// Categorized server settings
message GetServerConfigResponse {
  repeated ConfigCategory categories = 1;
}

// Config fields to update
message UpdateServerConfigRequest {
  string server_id = 1;
  map<string, string> updates = 2;
}

// Updated server settings
message UpdateServerConfigResponse {
  repeated ConfigCategory categories = 1;
}

// Empty global settings request
message GetGlobalSettingsRequest {}

// Categorized global defaults
message GetGlobalSettingsResponse {
  repeated ConfigCategory categories = 1;
}

// Global fields to update
message UpdateGlobalSettingsRequest {
  map<string, string> updates = 1;
}

// Updated global defaults
message UpdateGlobalSettingsResponse {
  repeated ConfigCategory categories = 1;
}
